# ukri-indicator-generation-wrapper

./: .gitignore  Dockerfile  fetch_hazard_indicator.cwl  fetch_hazard_indicator_inputs_example.yml  generate-catalog-and-links.py  indicator.py  indicator.sh  json-to-command.py  prepare-output.sh  pyproject.toml  validate_inventories.py
